welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:5: error: value unary_! is not a member of Int
	if (!(a%5)==(b%5)) {
            ^